# Recur

./: .env.example  .gitignore  ARCHITECTURE_REVIEW.md  CONTRIBUTING.md  DEPLOYMENT_ENV.md  PLAN.md  README.md  RECORDING.md  RECUR_PRO_PLAN.md  SETUP.md  SIMULATION.md  grant-application-final.md  grant-submission-checklist.md  index.html  opencode.json  package.json  recur_ui_inspo_board (1).html  turbo.json
.opencode/skills/ui-ux-frontend/: SKILL.md
apps/api/: package.json  tsconfig.json  vitest.config.ts
apps/api/src/: errors.ts  index.ts  types.ts
apps/docs/: next.config.mjs  package.json  source.config.ts  tailwind.config.ts
apps/docs/.source/: index.d.ts  index.js  index.ts  source.config.mjs
apps/docs/app/: globals.css  layout.tsx
apps/docs/lib/: source.ts
apps/keeper/: package.json
apps/web/: next.config.js  package.json  tailwind.config.js
contracts/: ARCHITECTURE.md  Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
contracts/programs/recur/: Cargo.toml
contracts/programs/recur/src/: lib.rs
contracts/tests/: recur.ts
scripts/: check-apps.ts  check-state.ts  check-subs.ts  check-subscriber.ts  check-transactions.ts  clean-stale-subs.ts  cleanup-fake-pdas.ts  close-pda.ts  create-webhook.ts  demo-seed.ts  demo-show.ts  e2e-devnet.ts  e2e-smoke.ts  fix-reactivate.ts  fix-state.ts  force-cancel-orphan.ts  force-cancel-pda.ts  fund-usdc.ts  init-treasury-ata.ts  nuke-all-pdas.ts  reconcile-payments.ts  seed-localnet.ts  seed-platform-merchant.ts  test-sdk.ts  test-webhooks.ts  watch-balances.ts
(+129 files in other folders)
