[package]
name = "recur"
version = "0.1.0"
description = "Recur — decentralised recurring billing on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "recur"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
anchor-spl = "0.32.0"
